[tool.poetry]
name = "imagesearch"
version = "0.1.4"
description = "Measure visual similiarity of a reference image to other images."
authors = ["Tim Martin <tim@timmart.in>"]
readme = "README.md"
repository = "https://github.com/t-mart/imagesearch"

[tool.poetry.dependencies]
python = "^3.8"
imagehash = "^4.1.0"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
black = "^19.10b0"
mypy = "^0.782"
autopep8 = "^1.5.4"
coverage = "^5.2.1"
bump2version = "^1.0.0"

[tool.poetry.scripts]
imagesearch = 'imagesearch.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
